--- a/WebMVC_NetCore/Views/Shared/_LayoutLogin.cshtml
+++ b/WebMVC_NetCore/Views/Shared/_LayoutLogin.cshtml
@@ -13,12 +13,13 @@
     <link rel="stylesheet" href="~/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
-     <script src="~/plugins/jquery/jquery.min.js"></script>
-     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/plugins/jquery/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/dist/js/adminlte.min.js"></script>
+    <script src="~/js/MyScript.js?v=@DateTime.Now.Ticks"></script>
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
